--- a/inthemakingpage.html
+++ b/inthemakingpage.html
@@ -1,1 +1,1 @@
-<img src="css/images/fotoshome/url-21.jpeg" alt="work in progress picture" />
+<img src="images/fotoshome/url-21.jpeg" alt="work in progress picture" />
