--- a/mustsee.html
+++ b/mustsee.html
@@ -20,72 +20,70 @@
     </header>
     <main>
       <h1>#MustSee</h1>
-      <h2>See the world. It's more fantastic than a dream.</h2>
+      <h2>~See the world. It's more fantastic than a dream~</h2>
       <h3>Top 10 places you need to see before you die</h3>
-      <h4>
+      <p>
         As you already know: the
         <strong>world is a beautiful place.</strong> There are so many
-        exceptional places to visit before you die! Remember, that often the
-        <strong>best surprises lurk in the simple pleasures,</strong> so do not
-        always look for the most “popular”, but rather get off the beaten
+        exceptional places you need to see with you own eyes! Remember, that
+        often
+        <strong>the best surprises lurk in the simple pleasures,</strong> so do
+        not always look for the most “popular”, but rather get off the beaten
         tourist track and really explore! Here are the
-        <strong>10 most spectacular places to visit before you die.</strong> Put
-        them on your travel bucket list, or just enjoy the ride in pictures…
-      </h4>
+        <strong>10 most spectacular places to see before you die.</strong> Put
+        them on your travel bucket list, or just enjoy the ride in pictures.
+      </p>
 
       <section>
         <article>
           <h3>1. Walk along the Great Wall of China</h3>
-          <h4>
+          <p>
             The Great Wall of China is 21 thousand kilometres long, so you might
             not want to walk it ALL! The most beautiful section of the Great
             Wall of China to walk is from Jinshanling to Simatai. This walk
             takes about 3-4 hours.
-          </h4>
+          </p>
         </article>
-        <img src="css/images/fotosmustsee/china.jpeg" alt="Chinese Muur" />
+        <img src="images/fotosmustsee/china.jpeg" alt="Chinese Muur" />
       </section>
 
       <section>
         <img
-          src="css/images/fotosmustsee/norway.jpeg"
+          src="images/fotosmustsee/norway.jpeg"
           alt="Preacher’s Pulpit Preikestolen"
         />
         <article>
           <h3>2. Stand on top of Preacher’s Pulpit Preikestolen, Norway</h3>
-          <h4>
+          <p>
             There’s a beautiful, moderately demanding 6km hike to reach the
             Pulpit rock. For an even more spectacular experience start the hike
             at night to see the sunrise once you get to the top. The best time
             to go is during the warmer months of May to October.
-          </h4>
+          </p>
         </article>
       </section>
 
       <section>
         <article>
           <h3>3. Take the Inca Trail to Machu Picchu in Peru</h3>
-          <h4>
+          <p>
             Hike through picturesque ever-changing environments including cloud
             forest and alpine tundra. The Classic Inca Trail takes 4 days but
             you can do longer or shorter treks to suit you.
-          </h4>
+          </p>
         </article>
-        <img src="css/images/fotosmustsee/peru.jpeg" alt="Machu Picch" />
+        <img src="images/fotosmustsee/peru.jpeg" alt="Machu Picch" />
       </section>
 
       <section>
-        <img
-          src="css/images/fotosmustsee/jordan.jpeg"
-          alt="The temples at Petra"
-        />
+        <img src="images/fotosmustsee/jordan.jpeg" alt="The temples at Petra" />
         <article>
           <h3>4. Wander among the temples at Petra, Jordan</h3>
-          <h4>
+          <p>
             The temples of Petra in Jordan are a must-see place to visit before
             you die. Discover for yourself why it is one of the New7Wonders of
             the World.
-          </h4>
+          </p>
         </article>
       </section>
 
@@ -94,54 +92,54 @@
           <h3>
             5. Take a pilgrimage route along the Camino de Santiago in Spain
           </h3>
-          <h4>
+          <p>
             Whatever your faith, the Camino de Santiago pilgrimage should be on
             your travel bucket list. Some set out on the Camino for spiritual
             reasons; many find spiritual reasons along the way.
-          </h4>
+          </p>
         </article>
         <img
-          src="css/images/fotosmustsee/spain.jpeg"
+          src="images/fotosmustsee/spain.jpeg"
           alt="Route along the Camino de Santia"
         />
       </section>
 
       <section>
         <img
-          src="css/images/fotosmustsee/australie.jpeg"
+          src="images/fotosmustsee/australie.jpeg"
           alt="Great Barrier Reef"
         />
         <article>
           <h3>6. Snorkel the Great Barrier Reef, Australia</h3>
-          <h4>
+          <p>
             The Great Barrier Reef is the largest living thing on Earth, often
             visible from outer space!
-          </h4>
+          </p>
         </article>
       </section>
 
       <section>
         <article>
           <h3>7. Camp on the Island of Mozambique</h3>
-          <h4>
+          <p>
             Clear white sand and turquoise sea, Mozambique is a destination of
             dreams.
-          </h4>
+          </p>
         </article>
         <img
-          src="css/images/fotosmustsee/mozambique.jpeg"
+          src="images/fotosmustsee/mozambique.jpeg"
           alt="Island of Mozambique"
         />
       </section>
 
       <section>
-        <img src="css/images/fotosmustsee/indonesia.jpeg" alt="Mount Bromo" />
+        <img src="images/fotosmustsee/indonesia.jpeg" alt="Mount Bromo" />
         <article>
           <h3>8. See a sunrise on Mount Bromo, Indonesia</h3>
-          <h4>
+          <p>
             You’ll have to get up early to reach the top before sunrise, but
             trust us – it’s worth it.
-          </h4>
+          </p>
         </article>
       </section>
 
@@ -150,30 +148,27 @@
           <h3>
             9. Feel small before the power of the Iguazu Falls, Argentina-Brazil
           </h3>
-          <h4>
+          <p>
             The Argentinian side has arguably the best place to see the Falls
             from – called the Devil’s Throat. Hang over the most powerful
             section of the Falls for an invigorating experience.
-          </h4>
+          </p>
         </article>
-        <img src="css/images/fotosmustsee/brazil.jpeg" alt="The Iguazu Falls" />
+        <img src="images/fotosmustsee/brazil.jpeg" alt="The Iguazu Falls" />
       </section>
 
       <section>
-        <img
-          src="css/images/fotosmustsee/madagaskar.jpeg"
-          alt="The baobab trees"
-        />
+        <img src="images/fotosmustsee/madagaskar.jpeg" alt="The baobab trees" />
         <article>
           <h3>10. Take a walk through the baobab trees in Madagascar</h3>
-          <h4>
+          <p>
             Live out your childhood Lion King fantasies with the fantastic
             variety of wildlife and nature in Madagascar!
-          </h4>
+          </p>
         </article>
       </section>
 
-      <!-- tekst van: https://www.edreams.com/blog/places-to-visit-before-you-die/ 
+      <!-- tekst geinspireerd van: https://www.edreams.com/blog/places-to-visit-before-you-die/ 
         afbeeldingen van: https://unsplash.com-->
     </main>
 
