--- a/How.html
+++ b/How.html
@@ -21,24 +21,24 @@
 
     <main>
       <h1>#How</h1>
-      <h2>Being adventerous is a habit.</h2>
-      <h3>How to be more adventurous</h3>
-      <h4>
-        <em>Magic happens outside your comford zone</em> That's what they say at least.
-        You are what you do. If you want more adventure in your life then it’s
-        down to you to get on with it and make it happen. You don’t need a lot
-        of money, time or to travel to exotic locations for an adventurous life.
-        But, if you don’t want to spend the rest of your life in a comfort
+      <h2>~Being adventerous is a habit~</h2>
+      <h3>Top 10 habits to be more adventurous</h3>
+      <p>
+        <em>Magic happens outside your comford zone</em> That's what they say at
+        least. You are what you do. If you want more adventure in your life then
+        it’s down to you to get on with it and make it happen. You don’t need a
+        lot of money, time or to travel to exotic locations for an adventurous
+        life. But, if you don’t want to spend the rest of your life in a comfort
         bubble, you may need to develop some adventure habits; practices that
         help you create or seize opportunities for adventure that exist around
         us everyday. Forget apples; an adventure a day is the well balanced way.
         Here’s 10 adventure habits worth cultivating.
-      </h4>
+      </p>
 
       <section>
         <article>
           <h3>1. Break with your routines</h3>
-          <h4>
+          <p>
             Routines are great for running an efficient life but the antithesis
             of adventure. So don’t do the same thing everyday; shake it up, vary
             it and see where that takes you. You don’t need to be radical, just
@@ -49,22 +49,22 @@
             meet some new people, talk to someone on the bus, or just sit in a
             different seat. Adventure can take many forms but routine isn’t one
             of them. So don’t let yours squash your explorer spirit.
-          </h4>
+          </p>
         </article>
         <img
-          src="css/images/fotoshow/habits.jpeg"
+          src="images/fotoshow/habits.jpeg"
           alt="Silhouet van iemand die een gebroken ketting aan de polsen heeft"
         />
       </section>
 
       <section>
         <img
-          src="css/images/fotoshow/smbreak.jpeg"
+          src="images/fotoshow/smbreak.jpeg"
           alt="Dobbelstenen die van online naar offline afbeelden"
         />
         <article>
           <h3>2. Give your gadgets a break</h3>
-          <h4>
+          <p>
             <em>disconnect to reconnect</em>
             I love my tech and know apps, maps and social networks can be great
             for planning, capturing and sharing adventures. But the very same
@@ -80,14 +80,14 @@
             and ask a stranger for a recommendation. Let your eyes be your
             window on the world and your legs be your interface. Venture out
             often and gadget free, feel the real world and let it move you.
-          </h4>
+          </p>
         </article>
       </section>
 
       <section>
         <article>
           <h3>3. Say ‘Yes’</h3>
-          <h4>
+          <p>
             If necessity is the mother of invention, I’m sure improvisation is
             the father of adventure. I love the edgy, not quite knowing what
             happens next feeling that comes from improvising whether in music,
@@ -101,19 +101,19 @@
             different. Take a breath, stamp down the reasons why not, and adopt
             an open mind. Step forward, accept the invitation, say yes, mean it
             and see where that takes you.
-          </h4>
+          </p>
         </article>
         <img
-          src="css/images/fotoshow/yes.jpeg"
+          src="images/fotoshow/yes.jpeg"
           alt="Afbeelding met het woord yes en een groene achtergrond"
         />
       </section>
 
       <section>
-        <img src="css/images/fotoshow/and.jpeg" alt="Sierlijk En teken" />
+        <img src="images/fotoshow/and.jpeg" alt="Sierlijk En teken" />
         <article>
           <h3>4. Say ‘Yes and..’</h3>
-          <h4>
+          <p>
             The second rule of improv says don’t just say ‘yes’, say ‘yes and’ –
             accept the invitation and add something to it, an idea of your own,
             a suggestion, something that takes things even further. When you say
@@ -121,14 +121,14 @@
             naysaying, not just accepting adventure invitations but we’re making
             them and shaping them. No more watching and waiting; we are actor
             and initiator.
-          </h4>
+          </p>
         </article>
       </section>
 
       <section>
         <article>
           <h3>5. Take the path you’ve never travelled</h3>
-          <h4>
+          <p>
             A well trodden path is usually easy to spot while the path less
             travelled or untravelled can be hard to find. If you’re looking for
             everyday adventures neither of these are particularly useful; what
@@ -140,21 +140,21 @@
             meet people you don’t know, maybe find another path and who knows
             where that might lead. And when you get tired of paths perhaps you
             could ignore them altogether and follow your nose instead.
-          </h4>
+          </p>
         </article>
         <img
-          src="css/images/fotoshow/path.jpeg"
+          src="images/fotoshow/path.jpeg"
           alt="Gras met mysterische tegels"
         />
       </section>
       <section>
         <img
-          src="css/images/fotoshow/stranger.jpeg"
+          src="images/fotoshow/stranger.jpeg"
           alt="Twee verschillende mensen die in een openbare plek met elkaar praten"
         />
         <article>
           <h3>6. Do talk to strangers</h3>
-          <h4>
+          <p>
             I know this probably goes against advice your parents gave you and
             contradicts stranger danger stories on the internet, radio and TV,
             but the secret truth is most strangers aren’t dangerous. In terms of
@@ -168,37 +168,39 @@
             of a place or an issue, lead you to do or try something different,
             even invite you to be someone different. So, do talk to strangers,
             the stranger the better.
-          </h4>
+          </p>
         </article>
       </section>
       <section>
-        <h3>7. Rest your strengths, learn something new</h3>
-        <h4>
-          Playing to your strengths, doing what you do well is great for the ego
-          and of course there’s many an adventure to be had polishing hard won
-          skills, taking them to the next level or into new and unfamiliar
-          environments. But there’s also fun to be had looking the other way,
-          doing what you know you’re not good at, exploring undeveloped skills,
-          trying something completely new. Learning is always an adventure into
-          the personal unknown, an everyday opportunity to try and not know if
-          you will succeed. And, if at first you don’t succeed, well think of it
-          as a chance to try and try again. And then when you do succeed, go try
-          something else. And don’t let age be an excuse, you’re never too old
-          to give something new a go.
-        </h4>
+        <article>
+          <h3>7. Rest your strengths, learn something new</h3>
+          <p>
+            Playing to your strengths, doing what you do well is great for the
+            ego and of course there’s many an adventure to be had polishing hard
+            won skills, taking them to the next level or into new and unfamiliar
+            environments. But there’s also fun to be had looking the other way,
+            doing what you know you’re not good at, exploring undeveloped
+            skills, trying something completely new. Learning is always an
+            adventure into the personal unknown, an everyday opportunity to try
+            and not know if you will succeed. And, if at first you don’t
+            succeed, well think of it as a chance to try and try again. And then
+            when you do succeed, go try something else. And don’t let age be an
+            excuse, you’re never too old to give something new a go.
+          </p>
+        </article>
         <img
-          src="css/images/fotoshow/new.jpeg"
+          src="images/fotoshow/new.jpeg"
           alt="Mensen die hetzelfde schilderen"
         />
       </section>
       <section>
         <img
-          src="css/images/fotoshow/risk.jpeg"
+          src="images/fotoshow/risk.jpeg"
           alt="Iemand die tussen twee hoge rotsen slacklinet"
         />
         <article>
           <h3>8. Gamble responsibly</h3>
-          <h4>
+          <p>
             I know this sounds like more bad advice, against the counsel of
             parents and teachers, but we all know life gets more interesting
             when there’s something at stake. But we’re not talking your money or
@@ -211,35 +213,40 @@
             something you might fail at. And see what happens. Stack the odds in
             your favour if you like but if you want things to get interesting
             make sure the outcome isn’t a dead cert.
-          </h4>
+          </p>
         </article>
       </section>
       <section>
-        <h3>9. Pop your comfort bubble</h3>
-        <h4>
-          I love comfort bubbles. They are safe, familiar, warm, fuzzy and
-          undemanding. What’s not to like? Except the fact they’re not terribly
-          interesting or developmental. From inside a bubble, life beyond may
-          look unfamiliar, but that’s because you’re looking through the
-          distorting film of the bubble itself. Just beyond this iridescent
-          layer, all kinds of new experiences are waiting, within easy reach. So
-          stop looking at your beautiful bubble and pop it. One finger and one
-          deliberate moment is all it takes. Release that surface tension, step
-          through the distorting thin film of your preconceptions and find out
-          what the world beyond is really like.
-        </h4>
-        <img src="css/images/fotoshow/conforzone.jpeg" alt="Papier met met twee
+        <article>
+          <h3>9. Pop your comfort bubble</h3>
+          <p>
+            I love comfort bubbles. They are safe, familiar, warm, fuzzy and
+            undemanding. What’s not to like? Except the fact they’re not
+            terribly interesting or developmental. From inside a bubble, life
+            beyond may look unfamiliar, but that’s because you’re looking
+            through the distorting film of the bubble itself. Just beyond this
+            iridescent layer, all kinds of new experiences are waiting, within
+            easy reach. So stop looking at your beautiful bubble and pop it. One
+            finger and one deliberate moment is all it takes. Release that
+            surface tension, step through the distorting thin film of your
+            preconceptions and find out what the world beyond is really like.
+          </p>
+        </article>
+        <img
+          src="images/fotoshow/conforzone.jpeg"
+          alt="Papier met met twee
         cirkels, de eerste staat voor de confortzone en de tweede cirkel voor de
-        plek van de magie te vinden is."" />
+        plek van de magie te vinden is."
+        />
       </section>
       <section>
         <img
-          src="css/images/fotoshow/noroutine.png"
+          src="images/fotoshow/noroutine.png"
           alt="Papier met daarop geschreven, new mindset, new results"
         />
         <article>
           <h3>10. Do something new everyday</h3>
-          <h4>
+          <p>
             Never mind an apple a day, let’s aim for an adventure a day. That’ll
             keep the routine away. An adventure mind-set is a matter of habit,
             not money, time or expertise. Opportunities for adventure abound, we
@@ -249,21 +256,14 @@
             life of adventure then by all means dream big, then start small, get
             help if you need it, but above all else do something everyday that
             invites adventure into your life.
-          </h4>
+          </p>
         </article>
       </section>
-      <!-- tekst van:https://www.familyadventureproject.org/adventure-lifestyle-adventure-habit/ 
+      <!-- tekst geinspireerd van:https://www.familyadventureproject.org/adventure-lifestyle-adventure-habit/ 
       afbeelingen van: https/google/afbeeldingen/-->
     </main>
-    <footer>
-      <h2>Over at.venture</h2>
-      <p>at.venture is een Nederlandse blog van Sasja (18). Hier geeft ze</p>
-      <h2>Contact</h2>
-      <p>at.venture.info@gmail.com</p>
-      <img src="icons" alt="" />
-    </footer>
   </body>
-
+  <!-- footer -->
   <footer>
     <h1>Over at.venture</h1>
     <h2>at.venture is een Nederlandse blog van Sasja (18). Hier geeft ze</h2>
