--- a/fuckitlist.html
+++ b/fuckitlist.html
@@ -10,9 +10,10 @@
 
   <body>
     <header>
+      <img src="images/fotoshome/logo.svg" alt="logo handwritten, @venture" />
       <nav>
         <ul>
-          <li><a href="atventure.html">#Home</a></li>
+          <li><a href="index.html">#Home</a></li>
           <li><a href="fuckitlist.html">#F*ckItList</a></li>
           <li><a href="mustsee.html">#MustSee</a></li>
           <li><a href="how.html">#How</a></li>
