--- a/inthemakingpage.html
+++ b/inthemakingpage.html
@@ -1,1 +1,14 @@
-<img src="images/fotoshome/url-21.jpeg" alt="work in progress picture" />
+<body>
+  <header>
+    <img src="images/fotoshome/logo.svg" alt="logo handwritten, @venture" />
+    <nav>
+      <ul>
+        <li><a href="index.html">#Home</a></li>
+        <li><a href="fuckitlist.html">#F*ckItList</a></li>
+        <li><a href="mustsee.html">#MustSee</a></li>
+        <li><a href="how.html">#How</a></li>
+      </ul>
+    </nav>
+  </header>
+  <img src="images/fotoshome/url-21.jpeg" alt="work in progress picture" />
+</body>
