--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 
   <body>
     <!-- header -->
-    <header>
-      <img src="images/fotoshome/logo.svg" alt="logo handwriten, @venture">
-      <nav>
-        <ul>
-          <li><a href="atventure.html">#Home</a></li>
-          <li><a href="fuckitlist.html">#F*ckItList</a></li>
-          <li><a href="mustsee.html">#MustSee</a></li>
-          <li><a href="how.html">#How</a></li>
-        </ul>
-      </nav>
-    </header>
+    <body>
+      <header>
+        <img
+        src="images/fotoshome/logo.svg"
+        alt="logo handwritten, @venture"
+      />
+        <nav>
+          <ul>
+            <li><a href="index.html">#Home</a></li>
+            <li><a href="fuckitlist.html">#F*ckItList</a></li>
+            <li><a href="mustsee.html">#MustSee</a></li>
+            <li><a href="how.html">#How</a></li>
+          </ul>
+        </nav>
+      </header>
     <!-- end of header -->
 
     <!-- main -->
