--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <!-- main -->
     <main>
       <form>
-        <img src="images/fotoshome/defenitieoriginal3.png" alt="defenitiefoto" />
+        <img src="images/fotoshome/defenitieoriginal3.png" alt="defenitiephoto" />
 
         <input type="text" class="search-input" placeholder="   find you next adventure.." />
 
         <!-- tutorial van: https://www.youtube.com/watch?v=9IsC4PLXv9w&t=579s -->
       </form>
-      <h2>Blog</h2>
+      <h1>Blog</h1>
 
       <ul>
         <li>
