--- a/inthemakingpage.html
+++ b/inthemakingpage.html
@@ -1,14 +1,89 @@
-<body>
-  <header>
-    <img src="images/fotoshome/logo.svg" alt="logo handwritten, @venture" />
-    <nav>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>In the Making Page</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <img src="images/fotoshome/logo.svg" alt="logo handwritten, @venture" />
+      <nav>
+        <ul>
+          <li><a href="index.html">#Home</a></li>
+          <li><a href="fuckitlist.html">#F*ckItList</a></li>
+          <li><a href="mustsee.html">#MustSee</a></li>
+          <li><a href="how.html">#How</a></li>
+        </ul>
+      </nav>
+    </header>
+    <img src="images/fotoshome/url-21.jpeg" alt="work in progress picture" />
+    <!-- Afbeelding van: https://www.pngwing.com/en/search?q=work+In+Progress -->
+    <!-- footer -->
+    <footer>
+      <a href="inthemakingpage.html">
+        <p>NIEUWSBRIEF</p>
+        <p>PRIVACY</p>
+        <p>POLICY</p>
+      </a>
+
+      <nav>
+        <ul>
+          <li>
+            <a href="https://www.instagram.com">
+              <img
+                src="images/footericons/instagram-131979013078668579_256.png"
+                alt="Follow us on Instagram"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://nl-nl.facebook.com">
+              <img
+                src="images/footericons/facebook-131979012930159929_256.png"
+                alt="Follow us on Facebook"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://twitter.com">
+              <img
+                src="images/footericons/twitter-131979013536752881_256.png"
+                alt="Follow us on Twitter"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.youtube.com">
+              <img
+                src="images/footericons/youtube-131979013593150357_256.png"
+                alt="Follow us on Youtube"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://nl.pinterest.com">
+              <img
+                src="images/footericons/pinterest-131979013286606732_256.png"
+                alt="Follow us on Pinterest"
+              />
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <!-- icons van: https://icons-for-free.com/ -->
       <ul>
-        <li><a href="index.html">#Home</a></li>
-        <li><a href="fuckitlist.html">#F*ckItList</a></li>
-        <li><a href="mustsee.html">#MustSee</a></li>
-        <li><a href="how.html">#How</a></li>
+        <li>© 2021 AT.VENTURE</li>
+        <li>CONTACT: at.venture.info@gmail.com</li>
+        <li>SOCIAL MEDIA: @venture</li>
       </ul>
-    </nav>
-  </header>
-  <img src="images/fotoshome/url-21.jpeg" alt="work in progress picture" />
-</body>
+
+      <img src="images/fotoshome/logo.svg" alt="Logo handwritten, @venture" />
+    </footer>
+  </body>
+</html>
